Mutex code (untested)
Monotone-Parent: a17287c657e8ee4ab362dfa27f552c281bfc95b8
Monotone-Revision: 89b92a8773409bf3416266436a7d957e9124e6d0

Monotone-Author: mpc
Monotone-Date: 2004-06-25T22:19:18
Monotone-Branch: i2p.i2p

--- a/apps/enclave/Makefile
+++ b/apps/enclave/Makefile
@@ -34,7 +34,7 @@ CFLAGS = -g -march=i486 -pipe -Wall
 
 CFLAGS += -I$(SAMINCDIR) -I$(TOMCRYPTDIR)
 LDFLAGS = -L$(SAMLIBDIR) -L$(TOMCRYPTDIR)
-LIBS = -lsam -ltomcrypt
+LIBS = -lsam -ltomcrypt -lpthread
 
 #
 # Object files
@@ -45,6 +45,7 @@ OBJS =	$(OBJDIR)/bigint.o \
 		$(OBJDIR)/config.o \
 		$(OBJDIR)/logger.o \
 		$(OBJDIR)/main.o \
+		$(OBJDIR)/mutex.o \
 		$(OBJDIR)/peers.o \
 		$(OBJDIR)/random.o \
 		$(OBJDIR)/rpc.o \
