Mutex code (untested)
Monotone-Parent: 89b92a8773409bf3416266436a7d957e9124e6d0
Monotone-Revision: b149b6e46aab78f0e891e88481d72cbcf8a6f4d3

Monotone-Author: mpc
Monotone-Date: 2004-06-25T22:22:48
Monotone-Branch: i2p.i2p

--- a/apps/enclave/Makefile
+++ b/apps/enclave/Makefile
@@ -4,6 +4,12 @@
 #
 
 #
+# Your operating environment
+#
+
+OS = CYGWIN
+
+#
 # Directories
 #
 
@@ -27,6 +33,7 @@ CC = g++
 #
 
 CFLAGS = -g -march=i486 -pipe -Wall
+CFLAGS += -DOS=$(OS)
 
 #
 # Libraries
