use mihi's template engine to set a random timestamper password so people dont need to think about that stuff don't use the dyndns anymore for seeding (use dev.i2p.net/i2pdb)
Monotone-Parent: 8d66c99baff16f89fc3289796a04c8848bf91c69
Monotone-Revision: 0533a6f3ff2d40230636b3c8ef807d92a3ed5875

Monotone-Author: jrandom
Monotone-Date: 2004-07-10T02:36:27
Monotone-Branch: i2p.i2p

--- a/installer/java/src/reseed.sh.template
+++ b/installer/java/src/reseed.sh.template
@@ -1,4 +1,4 @@
 #!/bin/sh
 cd ##_scripts_installdir##
-java -jar lib/fetchseeds.jar netDb
+java -jar lib/fetchseeds.jar netDb http://dev.i2p.net/i2pdb/
 echo Router network database reseeded
