added source and target declarations for the javac commands so we can build with the 1.5^W5.0 JDK (also added deprecation, since, well, we can :)
Monotone-Parent: a36e655c2cc3725b1b93f54bf2c3c9f5abee67a3
Monotone-Revision: 6dfd8f325e5bc045626a126ffe80ae9ea74a1a0c

Monotone-Author: jrandom
Monotone-Date: 2004-07-11T04:16:59
Monotone-Branch: i2p.i2p

--- a/apps/httptunnel/java/build.xml
+++ b/apps/httptunnel/java/build.xml
@@ -11,7 +11,7 @@
         <mkdir dir="./build/obj" />
         <javac 
             srcdir="./src" 
-            debug="true" 
+            debug="true" target="1.1" source="1.3" deprecation="on" 
             destdir="./build/obj" 
             classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar" />
     </target>
