target=1.3 and source=1.3, not target=1.1 and source=1.3 (this is what caused the runtime errors on sun jvms but not on kaffe) ((aka i slacked and didn't test sufficiently.  off with my head)) this now builds and runs fine in sun 1.3-1.5 jvms, as well as kaffe
Monotone-Parent: f52b8d13d1b46ac5ecd4cb5c00b899ca9734efd3
Monotone-Revision: b34228f42983a275f630cb6a0c9d9fd7e3d1b673

Monotone-Author: jrandom
Monotone-Date: 2004-07-12T16:39:22
Monotone-Branch: i2p.i2p

--- a/apps/ministreaming/java/build.xml
+++ b/apps/ministreaming/java/build.xml
@@ -8,7 +8,7 @@
     <target name="compile">
         <mkdir dir="./build" />
         <mkdir dir="./build/obj" />
-        <javac srcdir="./src" debug="true" target="1.1" source="1.3" deprecation="on" destdir="./build/obj" classpath="../../../core/java/build/i2p.jar" />
+        <javac srcdir="./src" debug="true" deprecation="on" source="1.3" target="1.3" destdir="./build/obj" classpath="../../../core/java/build/i2p.jar" />
     </target>
     <target name="jar" depends="compile">
         <jar destfile="./build/mstreaming.jar" basedir="./build/obj" includes="**/*.class" />
