Updated warhammer example, and fixed a bug on FreeBSD
Monotone-Parent: 067c7c5297db45852aeadf8111dc6720a987d353
Monotone-Revision: a61ddbca326f15461464e2ce3406c6d10649c444

Monotone-Author: mpc
Monotone-Date: 2004-07-31T23:31:02
Monotone-Branch: i2p.i2p

--- a/apps/sam/c/examples/Makefile.mingw
+++ b/apps/sam/c/examples/Makefile.mingw
@@ -14,6 +14,7 @@ CC = C:\Dev-Cpp\bin\gcc
 
 CFLAGS = -g -O2 -pipe -std=c99 -Wall
 CFLAGS += -I../inc -L../lib
+CFLAGS += -DWINSOCK
 LIBS = -lsam -lwsock32
 
 #
