Removed broken examples and added some more comments to warhammer
Monotone-Parent: 551cd8136c1c6c97afed0842f12c0d4f0bfa1150
Monotone-Revision: 2814849153648fb7203e94986de203ee99a945ab

Monotone-Author: mpc
Monotone-Date: 2004-08-01T00:30:25
Monotone-Branch: i2p.i2p

--- a/apps/sam/c/examples/Makefile.mingw
+++ b/apps/sam/c/examples/Makefile.mingw
@@ -13,23 +13,15 @@ CC = C:\Dev-Cpp\bin\gcc
 #
 
 CFLAGS = -g -O2 -pipe -std=c99 -Wall
-CFLAGS += -I../inc -L../lib
 CFLAGS += -DWINSOCK
+CFLAGS += -I../inc -L../lib
 LIBS = -lsam -lwsock32
 
 #
 # Build rules
 #
 
-all: dgram-client dgram-server warhammer-dgram
-
-dgram-client:
-	$(CC) $(CFLAGS) -o dgram-client.o -c dgram-client.c
-	$(CC) $(CFLAGS) -o dgram-client dgram-client.o $(LIBS)
-
-dgram-server:
-	$(CC) $(CFLAGS) -o dgram-server.o -c dgram-server.c
-	$(CC) $(CFLAGS) -o dgram-server dgram-server.o $(LIBS)
+all: warhammer-dgram
 
 warhammer-dgram:
 	$(CC) $(CFLAGS) -o warhammer-dgram.o -c warhammer-dgram.c
@@ -40,4 +32,4 @@ warhammer-dgram:
 #
 
 clean:
-	-rm -f *.o *.exe dgram-client dgram-server warhammer-dgram
+	-rm -f *.o *.exe warhammer-dgram
