Fixed stupid bug when pinging multiple hosts
Monotone-Parent: 992b18a667d315076c833b8636b3550bce62f77f
Monotone-Revision: 8c85f30289ca1c32de38271bcf64c7e700ca0a96

Monotone-Author: mpc
Monotone-Date: 2004-08-01T04:06:44
Monotone-Branch: i2p.i2p

--- a/apps/sam/c/examples/Makefile
+++ b/apps/sam/c/examples/Makefile
@@ -22,7 +22,7 @@ LIBS = -lsam
 
 all: warhammer-dgram
 
-warhammer-dgram:
+warhammer-dgram: warhammer-dgram.c
 	$(CC) $(CFLAGS) -o warhammer-dgram.o -c warhammer-dgram.c
 	$(CC) $(CFLAGS) -o warhammer-dgram warhammer-dgram.o $(LIBS)
 
