--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -2,22 +2,21 @@
 <project basedir="." default="all" name="routerconsole">
     <target name="all" depends="clean, build" />
     <target name="build" depends="builddep, jar" />
-    <target name="builddep" depends="jetty" >
+    <target name="builddep">
         <ant dir="../../../router/java/" target="build" />
 	<!-- router will build core -->
     </target>
-    <target name="jetty">
-        <untar src="jetty-4.2.21-min.tar.bz2" compression="bzip2" dest="." />
-        <ant dir="jetty-4.2.21-min/extra/jdk1.2/" target="all" />
+    <target name="prepare">
+        <ant dir="../../jetty/" target="build" />
     </target>
-    <target name="compile">
+    <target name="compile" depends="prepare">
         <mkdir dir="./build" />
         <mkdir dir="./build/obj" />
         <javac 
             srcdir="./src" 
             debug="true" deprecation="on" source="1.3" target="1.3" 
             destdir="./build/obj" 
-            classpath="../../../core/java/build/i2p.jar:../../../router/java/build/router.jar:jetty-4.2.21-min/extra/lib/org.mortbay.jetty-jdk1.2.jar" />
+            classpath="../../../core/java/build/i2p.jar:../../../router/java/build/router.jar:../../jetty/jettylib/org.mortbay.jetty-jdk1.2.jar" />
     </target>
     <target name="jar" depends="compile">
         <jar destfile="./build/routerconsole.jar" basedir="./build/obj" includes="**/*.class">
@@ -52,6 +51,5 @@
     <target name="distclean" depends="clean">
 	<!-- router will clean core -->
         <ant dir="../../../router/java/" target="distclean" />
-        <delete dir="./jetty-4.2.21-min" />
     </target>
 </project>
