changed _botShutdownCommand to _botShutdownPassword for clarity
Monotone-Parent: 45227e4b79c0972dd79431b3e8e80b749de05908
Monotone-Revision: dbb1582f2fe4bf9c7653e34298b29b637147e925

Monotone-Author: hypercubus
Monotone-Date: 2004-08-01T06:42:31
Monotone-Branch: i2p.i2p

--- a/apps/bogobot/bogo.config
+++ b/apps/bogobot/bogo.config
@@ -18,10 +18,11 @@ ownerPrimaryNick=somenick
 ownerSecondaryNick=somenick_
 
 ###
-# The bot will disconnect and shut down when sent this command via private
-# message (aka query) from either of the owner nicks specified above.
+# The bot will disconnect and shut down when sent this password via private
+# message (aka query) from either of the owner nicks specified above. DO NOT USE
+# THIS DEFAULT VALUE!
 #
-botShutdownCommand=take off eh
+botShutdownPassword=take off eh
 
 ###
 # The server, channel, and port the bot will connect to.
