* add new and generally ugly components to allow web based control of tunnels * build an i2ptunnel.war
Monotone-Parent: 1e5efd015ceb394bfa58419ce1bf9e0f1b8ce398
Monotone-Revision: 3f2471d93aec0e2c5635a779a939722d3f92dc65

Monotone-Author: jrandom
Monotone-Date: 2004-08-03T08:21:29
Monotone-Branch: i2p.i2p

--- a/apps/i2ptunnel/java/build.xml
+++ b/apps/i2ptunnel/java/build.xml
@@ -22,6 +22,12 @@
                 <attribute name="Class-Path" value="i2p.jar mstreaming.jar" />
             </manifest>
         </jar>
+        <ant target="war" />
+    </target>
+    <target name="war"> 
+        <war destfile="build/i2ptunnel.war" webxml="../jsp/web.xml"
+             basedir="../jsp/" excludes="web.xml">
+        </war>
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
