precompile all of the JSPs so that people with JREs instead of JDKs can load this up
Monotone-Parent: 30fb279976efdf530a57a29ebcaa2254908c20e5
Monotone-Revision: db6404c9d0e6dab6abae074d7278fa5991b17d45

Monotone-Author: jrandom
Monotone-Date: 2004-08-05T02:24:00
Monotone-Branch: i2p.i2p

--- a/apps/i2ptunnel/jsp/web.xml
+++ b/apps/i2ptunnel/jsp/web.xml
@@ -4,14 +4,14 @@
     "http://java.sun.com/j2ee/dtds/web-app_2.2.dtd">
 
 <web-app>
+    <!-- precompiled servlets -->
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>
-            index.jsp
-        </welcome-file>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
