reverting previous commit; realized it would hammer Mort Bay's servers
Monotone-Parent: 3d79af687cd785f49bd7b6206299c9c71b2dec7b
Monotone-Revision: 5e935512d47305b605e71cf51c800fd8eb70214e

Monotone-Author: hypercubus
Monotone-Date: 2004-08-08T23:07:07
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
         <echo message="  prepWEB:   pull down the Jetty libraries and whatever they depend on for the router console web application" />
         <echo message="  buildWEB:  build the router console web application (depends upon prepWEB)" />
     </target>
-    <target name="dist" depends="distclean, build, prepWEB, buildWEB, javadoc" />
+    <target name="dist" depends="distclean, build, buildWEB, javadoc" />
     <target name="build" depends="builddep, jar" />
     <target name="buildclean" depends="distclean, build" />
     <target name="builddep">
