Some more Makefile updates
Monotone-Parent: 5e935512d47305b605e71cf51c800fd8eb70214e
Monotone-Revision: 304be6b6fe2cb0cc242bf7da206c3e7acb8fcd0f

Monotone-Author: mpc
Monotone-Date: 2004-08-09T09:39:20
Monotone-Branch: i2p.i2p

--- a/apps/sam/c/examples/i2p-ping/Makefile
+++ b/apps/sam/c/examples/i2p-ping/Makefile
@@ -1,5 +1,5 @@
 #
-# This Makefile is compatible with GNU Make
+# This Makefile is compatible with GNU Make and should work on POSIX systems
 #
 
 #
@@ -8,6 +8,7 @@
 
 CC = gcc
 INSTALL = install
+RM = rm
 
 #
 # Flags
@@ -21,7 +22,7 @@ LIBS = -lsam
 # Build rules
 #
 
-all: i2p-ping
+all: clean i2p-ping
 
 i2p-ping: i2p-ping.c
 	$(CC) $(CFLAGS) -o i2p-ping.o -c i2p-ping.c
@@ -35,4 +36,4 @@ install: i2p-ping
 #
 
 clean:
-	-rm -f *.o *.exe i2p-ping
+	-$(RM) -f i2p-ping *.o
