--- a/apps/sam/c/Makefile.common
+++ b/apps/sam/c/Makefile.common
@@ -2,7 +2,6 @@
 # This Makefile contains instructions common to all platforms
 #
 
-
 #
 # Build rules
 #
@@ -23,4 +22,4 @@ libsam: $(OBJS)
 #
 
 clean:
-	-$(RM) -f $(LIBDIR)/libsam.a $(OBJDIR)/* .depend
+	-$(RM) -f $(LIBDIR)/libsam.a $(OBJDIR)/*.o .depend
