--- a/apps/sam/c/examples/Makefile.posix
+++ b/apps/sam/c/examples/Makefile.posix
@@ -1,22 +1,21 @@
 #
-# This Makefile is compatible with GNU Make and has Winsock linking
+# This Makefile is compatible with GNU Make and should work on POSIX systems
 #
 
 #
 # Programs
 #
 
-CC = C:\Dev-Cpp\bin\gcc
-RM = C:\Dev-Cpp\bin\rm
+CC = gcc
+RM = rm
 
 #
 # Flags
 #
 
 CFLAGS = -g -O2 -pipe -std=c99 -Wall
-CFLAGS += -DWINSOCK
 CFLAGS += -I../inc -L../lib
-LIBS = -lsam -lwsock32
+LIBS = -lsam
 
 #
 # Include the make instructions common to all platforms
