integrated oOo's memory usage patch (the % shown is unfortunately % of peak, not % of max) [thanks oOo!] cleaned up build script to make sure we always build fresh JSPs and xml [thanks oOo^2!]
Monotone-Parent: 0cc9c639cfb3d43eeaea3c70e35896f97aadd2c7
Monotone-Revision: 34195b74d3aa929bb41feb6c12f0e4495a1e46c1

Monotone-Author: jrandom
Monotone-Date: 2004-08-11T22:23:48
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -28,10 +28,13 @@
     </target>
     <target name="war" depends="precompilejsp">
         <war destfile="build/routerconsole.war" webxml="../jsp/web-out.xml"
-             basedir="../jsp/" excludes="web.xml, *.java, *.jsp">
+             basedir="../jsp/" excludes="web.xml, *.java, *.jsp, web-fragment.xml">
         </war>
     </target>
     <target name="precompilejsp">
+        <delete dir="../jsp/WEB-INF/" />
+        <delete dir="../jsp/web-fragment.xml" />
+        <delete dir="../jsp/web-out.xml" />
         <mkdir dir="../jsp/WEB-INF/" />
         <mkdir dir="../jsp/WEB-INF/classes" />
         <!-- there are various jspc ant tasks, but they all seem a bit flakey -->
