track more info
Monotone-Parent: 676396b1828c3e5fe9d5eb1ac8b402c4184be016
Monotone-Revision: 58a3eb13f7553d6d187e4b1780a44e2a01654ddd

Monotone-Author: jrandom
Monotone-Date: 2004-08-13T02:22:45
Monotone-Branch: i2p.i2p

--- a/installer/java/src/harvester.config
+++ b/installer/java/src/harvester.config
@@ -222,8 +222,17 @@ statGroup.10.detail.3.name=db store sent (hour)
 statGroup.10.detail.3.option=stat_netDb.storeSent.60m
 statGroup.10.detail.3.field=3
 statGroup.10.detail.4.name=failed db lookups (hour)
-statGroup.10.detail.3.option=stat_netDb.failedPeers.60m
-statGroup.10.detail.3.field=3
+statGroup.10.detail.4.option=stat_netDb.failedPeers.60m
+statGroup.10.detail.4.field=3
+statGroup.10.detail.5.name=lookups sent (5m)
+statGroup.10.detail.5.option=stat_netDb.searchMessageCount.5m
+statGroup.10.detail.5.field=0
+statGroup.10.detail.6.name=lookups sent (10m)
+statGroup.10.detail.6.option=stat_netDb.searchMessageCount.10m
+statGroup.10.detail.6.field=0
+statGroup.10.detail.7.name=lookups sent (60m)
+statGroup.10.detail.7.option=stat_netDb.searchMessageCount.60m
+statGroup.10.detail.7.field=0
 # 
 statGroup.11.name=bandwidth
 statGroup.11.detail.0.name=send rate (5 minutes)
